# serializer version: 1
# name: TestSetPlan.test_add_segments_to_plan_ok[accessions0]
  dict({
    'segments': list([
      dict({
        'length': 7219,
        'length_tolerance': 0.03,
        'name': dict({
          'key': 'L',
          'prefix': 'RNA',
        }),
        'rule': 'required',
      }),
      dict({
        'length': 1613,
        'length_tolerance': 0.03,
        'name': dict({
          'key': 'M',
          'prefix': 'RNA',
        }),
        'rule': 'required',
      }),
      dict({
        'length': 1291,
        'length_tolerance': 0.03,
        'name': dict({
          'key': 'S',
          'prefix': 'RNA',
        }),
        'rule': 'optional',
      }),
    ]),
  })
# ---
# name: TestSetPlan.test_add_segments_to_plan_ok[accessions1]
  dict({
    'segments': list([
      dict({
        'length': 7219,
        'length_tolerance': 0.03,
        'name': dict({
          'key': 'L',
          'prefix': 'RNA',
        }),
        'rule': 'required',
      }),
      dict({
        'length': 1291,
        'length_tolerance': 0.03,
        'name': dict({
          'key': 'S',
          'prefix': 'RNA',
        }),
        'rule': 'optional',
      }),
    ]),
  })
# ---
